// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent router - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Router skill for Azure AI Foundry agent lifecycle. Routes to specialized skills for packaging, deploying, invoking, and troubleshooting agents. Provides common project context resolution used by all agent skills.
USE FOR: Foundry agent, build agent, ship agent, agent lifecycle, agent workflow, create Foundry agent, manage Foundry agent, debug agent.
DO NOT USE FOR: Azure Functions (use azure-functions), non-agent Foundry features like model catalog or evaluations (use microsoft-foundry).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "azure",
    "azure-functions",
    "build",
    "catalog",
    "cli",
    "common",
    "container",
    "context",
    "create",
    "debug",
    "deploy",
    "deploying",
    "evaluations",
    "features",
    "foundry",
    "functions",
    "invoking",
    "lifecycle",
    "like",
    "manage",
    "mcp",
    "microsoft-foundry",
    "model",
    "non-agent",
    "packaging",
    "project",
    "provides",
    "resolution",
    "router",
    "routes",
    "ship",
    "skill",
    "skills",
    "specialized",
    "troubleshooting",
    "used",
    "workflow",
  ],
  "name": "agent",
}
`;

exports[`agent router - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "azure",
  "azure-functions",
  "build",
  "catalog",
  "cli",
  "common",
  "container",
  "context",
  "create",
  "debug",
  "deploy",
  "deploying",
  "evaluations",
  "features",
  "foundry",
  "functions",
  "invoking",
  "lifecycle",
  "like",
  "manage",
  "mcp",
  "microsoft-foundry",
  "model",
  "non-agent",
  "packaging",
  "project",
  "provides",
  "resolution",
  "router",
  "routes",
  "ship",
  "skill",
  "skills",
  "specialized",
  "troubleshooting",
  "used",
  "workflow",
]
`;
